# ovld

./: .flake8  .gitignore  .travis.yml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflow/: test.yml
.github/workflows/: python-package.yml
benchmarks/: common.py  conftest.py  test_add.py  test_ast.py  test_calc.py  test_fib.py  test_multer.py  test_regexp.py  test_trivial.py  test_tweaknum.py
docs/: codegen.md  compare.md  dependent.md  features.md  index.md  medley.md  types.md  usage.md
ovld/: __init__.py  core.py  mro.py  utils.py
src/ovld/: __init__.py  abc.py  codegen.py  core.py  dependent.py  medley.py  mro.py  recode.py  signatures.py  typemap.py  types.py  utils.py  version.py
tests/: test_abc.py  test_codegen.py  test_dependent.py  test_examples.py  test_global.py  test_medley.py  test_mro.py  test_ovld.py  test_typemap.py  test_types.py  test_utils.py
tests/benchmarks/: test_add.py
tests/modules/: gingerbread.py
tests/test_codegen/: test_dataclass_gen.txt  test_method_metaclass.txt  test_method_per_instance.txt  test_simple.txt  test_variant_generation.txt
tests/test_ovld/: test_display.txt  test_display_more.txt  test_doc.txt  test_doc2.txt  test_method_doc.txt
