[project]
name = "ovld"
version = "0.4.5"
description = "Overloading Python functions"
authors = [
    { name = "Olivier Breuleux", email = "breuleux@gmail.com" }
]
dependencies = []
readme = "README.md"
license = "MIT"
requires-python = ">= 3.9"

[project.urls]
Homepage = "https://ovld.readthedocs.io/en/latest/"
Documentation = "https://ovld.readthedocs.io/en/latest/"
Repository = "https://github.com/breuleux/ovld"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "codefind~=0.1.6",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-regressions>=2.5.0",
    "pytest-benchmark>=4.0.0",
    "multimethod>=1.12",
    "multipledispatch>=1.0.0",
    "plum-dispatch>=2.5.2",
    "runtype>=0.5.0",
    "fastcore>=1.7.4",
    "mkdocs>=1.6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ovld"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E241", "F722", "E501", "E203", "F811", "F821"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--benchmark-columns=median,min,max"
testpaths = [
    "tests",
]
